--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -16,3 +16,4 @@ docstrings.oneline = unfold
 trailingCommas = "never"
 optIn.breaksInsideChains = true
 includeCurlyBraceInSelectChains = true
+trailingCommas = "preserve"
