--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [2.12.12]
+        scala:
+          - 3.0.0-M3
+          - 3.0.0-RC1-bin-20210113-8345078-NIGHTLY
+          - 2.12.12
+          - 2.13.4
         java: [adopt@1.8]
     runs-on: ${{ matrix.os }}
     steps:
