--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        scala: [3.0.0-RC3, 2.13.5, 2.12.13]
+        scala: [3.0.0, 2.13.5, 2.12.13]
         java: [adopt@1.8]
     runs-on: ${{ matrix.os }}
     steps:
@@ -103,12 +103,12 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
-      - name: Download target directories (3.0.0-RC3)
+      - name: Download target directories (3.0.0)
         uses: actions/download-artifact@v2
         with:
-          name: target-${{ matrix.os }}-3.0.0-RC3-${{ matrix.java }}
+          name: target-${{ matrix.os }}-3.0.0-${{ matrix.java }}
 
-      - name: Inflate target directories (3.0.0-RC3)
+      - name: Inflate target directories (3.0.0)
         run: |
           tar xf targets.tar
           rm targets.tar
