--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,10 @@
 version=3.6.1
+runner.dialect = "scala213"
+fileOverride {
+  "glob:**/scala-3/**" {
+    runner.dialect = scala3
+  }
+}
 style = defaultWithAlign
 align.openParenCallSite = true
 align.openParenDefnSite = true
